--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,6 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="styles.css" type="text/css" />
     </head>
-    <body>
-        <!-- <header class="major-header">Title Text!</header> -->
-    </body>
-    <!-- <script defer src="index.js"></script> -->
+    <body></body>
 </html>
